--- a/FrontEnd/ConectaMais/src/app/apoie/apoie.component.html
+++ b/FrontEnd/ConectaMais/src/app/apoie/apoie.component.html
@@ -1,6 +1,8 @@
 <div id="secao01" class="container-fluid d-flex align-items-center justify-content-center">
-  <div class="">
-    <h1 class="text-white" style="text-shadow: 2px 2px 4px #000000;">APOIE</h1>
+  <div class="row">
+    <div class="col-md-12">
+      <h1 class="text-white" style="text-shadow: 2px 2px 4px #000000;">APOIE</h1>
+    </div>
   </div>
 </div>
 
@@ -9,7 +11,7 @@
   <div class="maintenance-wrap">
     <div class=" maintenance-anim"></div>
     <section class=" maintenance-content">
-      <h1>Pedimos desculpas pelo inconviniente.</h1>
+      <h1 id="h1-corpo">Pedimos desculpas pelo inconviniente.</h1>
       <p>Essa página está sob construção para atender com segurança e qualidade. Em breve, ela será liberada.</p>
     </section>
   </div>
