--- a/FrontEnd/ConectaMais/src/app/menu-inicial/menu-inicial.component.css
+++ b/FrontEnd/ConectaMais/src/app/menu-inicial/menu-inicial.component.css
@@ -3,6 +3,13 @@
   padding: 0;
 }
 
+@media screen and (max-width: 1000px) {
+  #logo{
+    height: 45px;
+    width: 50px;
+  }
+}
+
 p {
   color: white;
   margin-bottom: 0%;
