--- a/FrontEnd/ConectaMais/src/app/menu-inicial/menu-inicial.component.html
+++ b/FrontEnd/ConectaMais/src/app/menu-inicial/menu-inicial.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid p-0">
       <!-- logotipo -->
       <a class="navbar-brand m-0 ml-5 pb-3 pt-3" href="/home#inicio">
-        <img src="/assets/img/logoColorido&Sombra.png" alt="Logo Conecta Mais" width="100px" height="100px"
+        <img src="/assets/img/logoColorido&Sombra.png" id="logo" alt="Logo Conecta Mais" width="100px" height="100px"
           class="img-fluid">
       </a>
       <!-- /logotipo -->
