--- a/FrontEnd/ConectaMais/src/app/cadastrar/cadastrar.component.css
+++ b/FrontEnd/ConectaMais/src/app/cadastrar/cadastrar.component.css
@@ -7,7 +7,17 @@
   background-position: center;
   margin: 0;
   border: 0;
-  height: 650px;
+  height: 600px;
+}
+
+@media screen and (max-width: 900px) {
+  #secao01 {
+    height: 200px;
+  }
+  #logo{
+    height: 45px;
+    width: 50px;
+  }
 }
 
 .container-fluid {
