--- a/FrontEnd/ConectaMais/src/app/cadastrar/cadastrar.component.html
+++ b/FrontEnd/ConectaMais/src/app/cadastrar/cadastrar.component.html
@@ -1,11 +1,14 @@
 <div class="container-fluid p-0">
-  <a class="m-0 ml-5 pt-3 position-absolute" href="/home#inicio" style="z-index: 10;">
-    <img src="/assets/img/logoColorido&Sombra.png" alt="Logo Conecta Mais" width="100px" height="100px"
+  <a class="m-0 ml-1 pt-3 position-absolute" href="/home#inicio" style="z-index: 10;">
+    <img src="/assets/img/logoColorido&Sombra.png" id="logo" alt="Logo Conecta Mais" width="100px" height="100px"
       class="img-fluid">
   </a>
-  <div id="secao01" class="container-fluid d-flex align-items-center justify-content-center">
-    <div class="">
-      <h1 class="text-white" style="text-shadow: 2px 2px 4px #000000;">CADASTRO</h1>
+  <div id="secao01" class="container-fluid d-flex align-items-start justify-content-center">
+    <div class="row d-flex justify-content-center">
+      <div class="col-md-12 pt-3 mt-2 d-flex align-items-center">
+        <h1 class="text-white" style="text-shadow: 2px 2px 4px #000000;">CADASTRO</h1>
+      </div>
+      
     </div>
   </div>
   <div class="row">
