--- a/FrontEnd/ConectaMais/src/app/conheca-inst/conheca-inst.component.html
+++ b/FrontEnd/ConectaMais/src/app/conheca-inst/conheca-inst.component.html
@@ -6,16 +6,16 @@
 
 
 <div class="" id="bg-inst">
-  <div class="row m-0 pb-5 pt-5 d-flex justify-content-center">
-    <div class="col-md-11 mt-3" id="bg-fund-white">
+  <div class="row m-0 pb-5 d-flex justify-content-center">
+
+
+    <div class="col-md-11 mt-5" id="bg-fund-white">
       <div class="row d-inline-flex align-items-center">
         <img class="d-flex mt-2 ml-3" src="/assets/img/icon-gen.png" width="100px" alt="Generation">
         <h3 class="d-flex m-0 pl-2">Generation</h3>
       </div>
       <p class="d-block fs-16 text-dark">A Generation Brasil treina você nas habilidades mais relevantes para os empregadores, conectando você com o seu futuro. Saiba mais sobre nossos programas.</p>
     </div>
-
-
 
     <div class="col-md-11 mt-3" id="bg-fund-white">
       <div class="row d-inline-flex align-items-center">
@@ -25,8 +25,6 @@
       <p class="d-block fs-16 text-dark">Empoderar mulheres através da tecnologia diminuindo o gap de gênero no mercado de trabalho. É isso que fazemos.</p>
     </div>
 
-
-
     <div class="col-md-11 mt-3" id="bg-fund-white">
       <div class="row d-inline-flex align-items-center">
         <img class="d-flex mt-2 ml-3" src="/assets/img/icon-trybe.png" width="100px" alt="Trybe">
@@ -34,5 +32,6 @@
       </div>
       <p class="d-block fs-16 text-dark">Construímos nosso currículo com base no que o mercado de trabalho busca em profissionais de tecnologia. Com nosso Modelo de Sucesso Compartilhado, você tem a opção de começar a pagar apenas quando estiver trabalhando.</p>
     </div>
+
   </div>
 </div>
