--- a/FrontEnd/ConectaMais/src/app/pag-inicial/pag-inicial.component.html
+++ b/FrontEnd/ConectaMais/src/app/pag-inicial/pag-inicial.component.html
@@ -7,7 +7,7 @@
         Se conecte ainda mais<br>à Tecnologia</p>
       <p class="w-75 fw-bold fs-16 m-0 fade-in" style="text-shadow: 2px 2px 4px #000000;">Você quer aprender
         a programar, mas não sabe por onde começar?
-        <br> O Cenecta+ te ajuda! Busque por programas, bootcamps e hackathons.<br>Mais oportunidades ao alcance de
+        <br> O Conecta+ te ajuda! Busque por programas, bootcamps e hackathons.<br>Mais oportunidades ao alcance de
         todos! Venha construir novas conexões!</p>
       <div class="m-0 mt-4">
         <a class="btn btn-outline-secondary mr-3 p-2" role="button" routerLink='/conheca'>CONHEÇA AS INSTITUIÇÕES</a>
