--- a/FrontEnd/ConectaMais/src/app/perfil/perfil.component.css
+++ b/FrontEnd/ConectaMais/src/app/perfil/perfil.component.css
@@ -86,3 +86,18 @@
     width: auto;
     height: max-content;
   }
+
+  #trocaSenha{
+    color: gray;
+    text-decoration: none;
+  }
+  #trocaSenha:hover {
+      color: #FF914D;
+  }
+  #deletarUsuario{
+    color: gray;
+    text-decoration:none;
+  }
+  #deletarUsuario:hover{
+    color: #FF914D;
+  }
