--- a/FrontEnd/ConectaMais/src/app/menu-inicial/menu-inicial.component.html
+++ b/FrontEnd/ConectaMais/src/app/menu-inicial/menu-inicial.component.html
@@ -1,4 +1,4 @@
-  <nav id="navbar-changing" class="navbar navbar-expand-lg navbar-dark fixed-top p-0 pb-3 w-100">
+  <nav id="navbar-changing" class="navbar navbar-expand-lg navbar-dark fixed-top p-0 w-100">
     <div class="row container-fluid p-0" id="barra-menu">
       <!-- logotipo -->
       <a class="navbar-brand m-0 ml-2 pb-3 pt-1" href="/home#inicio">
@@ -12,7 +12,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-end p-0 mr-1" id="navbarSupportedContent">
-        <ul class="nav navbar-nav d-flex align-items-end">
+        <ul class="nav navbar-nav d-flex align-items-center">
           <li class="nav-item">
             <a class="nav-link" href="/home#quemSomos">QUEM SOMOS</a>
           </li>
