adicionando hover nos botões do menu

--- a/FrontEnd/ConectaMais/src/app/cadastrar/cadastrar.component.html
+++ b/FrontEnd/ConectaMais/src/app/cadastrar/cadastrar.component.html
@@ -3,7 +3,7 @@
     <img src="/assets/img/logoColorido&Sombra.png" id="logo" alt="Logo Conecta Mais" width="100px" height="100px"
       class="img-fluid">
   </a>
-  <div id="secao01" class="container-fluid d-flex align-items-start justify-content-center">
+  <div id="secao01" class="container-fluid d-flex align-items-center justify-content-center">
     <div class="row d-flex justify-content-center">
       <div class="col-md-12 pt-3 mt-2 d-flex align-items-center">
         <h1 class="text-white" style="text-shadow: 2px 2px 4px #000000;">CADASTRO</h1>
