--- a/FrontEnd/ConectaMais/src/app/menu-inicial/menu-inicial.component.html
+++ b/FrontEnd/ConectaMais/src/app/menu-inicial/menu-inicial.component.html
@@ -1,7 +1,7 @@
   <nav id="navbar-changing" class="navbar navbar-expand-lg navbar-dark fixed-top p-0 w-100">
     <div class="row container-fluid p-0" id="barra-menu">
       <!-- logotipo -->
-      <a class="navbar-brand m-0 ml-2 pb-3 pt-1" href="/home#inicio">
+      <a class="navbar-brand m-0 ml-3 pb-3 pt-1" href="/home#inicio">
         <img src="/assets/img/logoColorido&Sombra.png" alt="Logo Conecta Mais" class="img-fluid" id="logo">
       </a>
       <!-- /logotipo -->
@@ -11,7 +11,7 @@
         aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse justify-content-end p-0 mr-1" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse justify-content-end p-0 mr-3" id="navbarSupportedContent">
         <ul class="nav navbar-nav d-flex align-items-center">
           <li class="nav-item">
             <a class="nav-link" href="/home#quemSomos">QUEM SOMOS</a>
@@ -23,7 +23,7 @@
             <a class="nav-link " href="/home#conexoes">CONEXÕES</a>
           </li>
           <li class="nav-item" id="botao-entrar" style="padding-right: 0% !important;">
-            <a class="btn btn-outline-secondary p-2"  routerLink='/entrar'>ENTRAR</a>
+            <a class="btn btn-outline-secondary p-2" id="botao" routerLink='/entrar'>ENTRAR</a>
           </li>
         </ul>
       </div>
