subindo para fazer o pull

--- a/FrontEnd/ConectaMais/src/app/feed/feed.component.css
+++ b/FrontEnd/ConectaMais/src/app/feed/feed.component.css
@@ -4,7 +4,8 @@
   font-weight: 600;
   letter-spacing: 0.1mm;
   text-transform: uppercase;
-  width: 600px;
+  width: 100%;
+  
 }
 
 .container-fluid {
