--- a/FrontEnd/ConectaMais/src/app/feed/feed.component.html
+++ b/FrontEnd/ConectaMais/src/app/feed/feed.component.html
@@ -8,12 +8,16 @@
     style="padding-top: 135px; text-shadow: 2px 2px 4px #000000;">Faça um
     comentario e interaja com suas instituições favoritas</h4>
 
-  <p class="text-center">
-    <button class="btn" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false"
-      aria-controls="collapseExample" id="criarPost" *ngIf="showMsg1">
-      Criar nova postagem
-    </button>
-  </p>
+  <div class="row d-flex justify-content-center">
+    <div class="col-md-8">
+      <p class="text-center">
+        <button class="btn btn-block" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false"
+          aria-controls="collapseExample" id="criarPost" *ngIf="showMsg1">
+          Criar nova postagem
+        </button>
+      </p>
+    </div>
+  </div>
 
   <div class="collapse" id="collapseExample">
     <div class="row d-flex justify-content-center ">
@@ -85,7 +89,7 @@
                 <button class="btn my-btn collapsed " type="button" data-toggle="collapse"
                   [attr.data-target]="'#' + 'comentButton' + post.postagemID" aria-expanded="false"
                   aria-controls="collapseTwo">
-                    <i class="fas fa-comment-alt-dots"></i>Comentar
+                  <i class="fas fa-comment-alt-dots"></i>Comentar
                 </button>
               </h5>
             </div>
@@ -119,13 +123,11 @@
                           <span class="font-weight-bold">{{comment.usuarioObj.nome}}:</span>
                         </div>
                         <div class="col-md-2 d-flex justify-content-end">
-                          <button (click)='findByIdComentario(comment.comentarioID)'
-                            class="btn mr-3 rounded-circle" id="edit"
-                            data-toggle="modal" data-target="#editarComentario"><i
+                          <button (click)='findByIdComentario(comment.comentarioID)' class="btn mr-3 rounded-circle"
+                            id="edit" data-toggle="modal" data-target="#editarComentario"><i
                               class="fas fa-pencil-alt img-fluid"></i></button>
                           <button (click)='findByIdComentario(comment.comentarioID)' class="btn rounded-circle"
-                            id="alert"
-                            data-toggle="modal" data-target="#apagarComentario"><i
+                            id="alert" data-toggle="modal" data-target="#apagarComentario"><i
                               class="fas fa-trash-alt"></i></button>
                         </div>
                       </div>
@@ -155,8 +157,7 @@
 
       <!-- Modal editar -->
       <div class="modal fade" id="editarComentario" tabindex="-1" role="dialog"
-        aria-labelledby="TituloModalCentralizado"
-        aria-hidden="true">
+        aria-labelledby="TituloModalCentralizado" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <div class="modal-header">
@@ -167,7 +168,7 @@
             </div>
             <div class="modal-body">
 
-               <div class="form-group">
+              <div class="form-group">
                 <label for="texto">Texto</label>
                 <textarea [(ngModel)]='comentario.conteudoComentario' class="form-control" name="texto" id="texto"
                   rows="3"></textarea>
@@ -175,7 +176,8 @@
 
             </div>
             <div class="modal-footer">
-              <button (click)='atualizarComentario()' type="button" class="btn btn-info " data-dismiss="modal">Atualizar</button>
+              <button (click)='atualizarComentario()' type="button" class="btn btn-info "
+                data-dismiss="modal">Atualizar</button>
               <button type="button" class="btn btn-danger mr-4" data-dismiss="modal">Cancelar</button>
             </div>
           </div>
@@ -185,8 +187,7 @@
 
       <!-- Modal apagar -->
       <div class="modal fade" id="apagarComentario" tabindex="-1" role="dialog"
-        aria-labelledby="TituloModalCentralizado"
-        aria-hidden="true">
+        aria-labelledby="TituloModalCentralizado" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <div class="modal-header">
@@ -199,7 +200,8 @@
               <p>Tem certeza que deseja apagar este comentário?</p>
             </div>
             <div class="modal-footer">
-              <button (click)='deletarComentario()' type="button" class="btn btn-info " data-dismiss="modal">Sim</button>
+              <button (click)='deletarComentario()' type="button" class="btn btn-info "
+                data-dismiss="modal">Sim</button>
               <button type="button" class="btn btn-danger mr-4" data-dismiss="modal">Não</button>
             </div>
           </div>
